package command

type command interface {
	execute()
}
